--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/polyfill": "^7.8.7",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "node-sass": "^4.13.1"
